src/objects/ACET_Hippa_Category_Rule__mdt.object
<CustomObject>
    <description>The object is used to store Identifying HIPPA Disclosure Categories</description>
    <fields>
        <fullName>Caller_SubType__c</fullName>
        <label>Caller SubType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Representative</fullName>
                    <default>true</default>
                    <label>Personal Representative</label>
                </value>
                <value>
                    <fullName>Parent/Guardian/Custody Holder</fullName>
                </value>
                <value>
                    <fullName>Third Parties</fullName>
                </value>
                <value>
                    <fullName>Interpreter for member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                    <default>true</default>
                    <label>Member</label>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Dependent</fullName>
                </value>
                <value>
                    <fullName>Minor Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Age__c</fullName>
        <defaultValue>200</defaultValue>
        <inlineHelpText>Enter zero when Age is either &quot;Not Applicable&quot; or it is &quot;Below&quot; certain number</inlineHelpText>
        <label>Maximum Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Min_Age__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The</description>
        <inlineHelpText>Enter zero when Age is either &quot;Not Applicable&quot; or it is &quot;Above&quot; certain number</inlineHelpText>
        <label>Minimum Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <label>ACET Hippa Category Rule</label>
    <pluralLabel>ACET Hippa Category Rules</pluralLabel>
</CustomObject>